<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imgLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/imgBackground"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:alpha="0.1"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_placeholder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgMovie"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_placeholder"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-30dp"
        android:background="@drawable/bg_details"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/imgLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tvMovieName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/movie_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tvTagLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvMovieName"
                    android:text="@string/tagline"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:id="@+id/tvMovieInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_info"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tvTagLine"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvMovieReleasedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/released_date"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvMovieInfo"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvMovieReleased"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/released_date"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieReleasedTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieReleasedTitle"/>


                <TextView
                    android:id="@+id/tvMovieRatingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieReleasedTitle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvMovieRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieRatingTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieRatingTitle"/>

                <TextView
                    android:id="@+id/tvMovieRuntimeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieRatingTitle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvMovieRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieRuntimeTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieRuntimeTitle"/>


                <TextView
                    android:id="@+id/tvMovieBudgetTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieRuntimeTitle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvMovieBudget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget_value"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieBudgetTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieBudgetTitle"/>


                <TextView
                    android:id="@+id/tvMovieRevenueTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/revenue"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieBudgetTitle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvMovieRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/revenue_value"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieRevenueTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieRevenueTitle"/>

                <TextView
                    android:id="@+id/tvMovieDescriptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieRevenueTitle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvMovieDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/description_value"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieDescriptionTitle"/>



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>