<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dataRoot"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="150dp" />
        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:id="@+id/imgRate"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_round_star_24"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvMovieName"/>
        <TextView
            android:id="@+id/tvRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imgRate"
            app:layout_constraintTop_toTopOf="@id/imgRate"
            app:layout_constraintBottom_toBottomOf="@id/imgRate"/>

        <ImageView
            android:id="@+id/imgCrew"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_baseline_arrow_upward_24"
            app:layout_constraintTop_toBottomOf="@id/imgRate"
            app:layout_constraintStart_toStartOf="@id/guideline"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/tvCrew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crew"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imgCrew"
            app:layout_constraintTop_toTopOf="@id/imgCrew"
            app:layout_constraintBottom_toBottomOf="@id/imgCrew" />

        <ImageView
            android:id="@+id/imgDate"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_baseline_date_range_24"
            app:layout_constraintTop_toBottomOf="@id/imgCrew"
            app:layout_constraintStart_toStartOf="@id/guideline"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imgDate"
            app:layout_constraintTop_toTopOf="@id/imgDate"
            app:layout_constraintBottom_toBottomOf="@id/imgDate"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imgRoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/dataRoot"
            app:layout_constraintBottom_toBottomOf="@id/dataRoot"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgMovie"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:scaleType="fitXY"
                android:background="@color/white"
                app:shapeAppearanceOverlay="@style/RoundedImageView"
                android:src="@drawable/poster_placeholder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>